# routes/lead/index.js
@@ -30,11 +30,13 @@ router.post(
                           city: { type: 'string' },
                           language: { type: 'string' },
                           systemType: { type: 'string' },
-                          units: { type: 'integer' },
-                          billAmount: { type: 'integer' },
+                          consumptionType: { type: 'string' },
+                          consumptionValue: { type: 'integer' },
+                          calculatedValue: { type: 'integer' },
                           totalArea: { type: 'integer' },
                           billType: { type: 'string' },
                           billImage: { type: 'string' },
+                          leadSource: { type: 'string' },
                           agentId: { type: 'string', format: 'uuid' },
                           status: { type: 'string', enum: ['New Inquiry', 'Qualified Prospect', 'Referral Lead', 'Meeting Scheduled', 'Proposal Sent', 'In Negotiation', 'Closed - Won', 'Closed - Lost'] }
                       },
@@ -157,8 +159,9 @@ router.put(
                           city: { type: 'string' },
                           language: { type: 'string' },
                           systemType: { type: 'string' },
-                          units: { type: 'integer' },
-                          billAmount: { type: 'integer' },
+                          consumptionType: { type: 'string' },
+                          consumptionValue: { type: 'integer' },
+                          calculatedValue: { type: 'integer' },
                           totalArea: { type: 'integer' },
                           billType: { type: 'string' },
                           billImage: { type: 'string' },
